tests/incremental_haste_all_providers/bar.js
// @flow
let foo = require("foo");
foo as empty; // error: foo.js.flow declares foo to be number
